# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api.py  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  start-celery-all-local.sh  start.sh  wait_for_db.py
alembic/: env.py
src/core/: celery.py  config.py  database.py  enums.py  exception.py  gemini_client.py  handler.py  logging.py  repository.py  schema.py  security.py  tasks.py  websocket.py
src/core/middlewares/: cache.py  logging.py  ratelimit.py  security.py
src/core/models/: __init__.py  user.py
src/core/services/: ai_service.py  email_service.py  redis_service.py  storage.py
src/core/services/email_templates/: base.html  reset_password.html  verification_code.html  welcome.html
src/core/utils/: str.py  timezone.py  validation.py
src/modules/auth/: dependencies.py  router.py  schemas.py  service.py
src/modules/auth/models/: __init__.py  refresh_token.py
src/modules/auth/repositories/: __init__.py  refresh_token_repo.py
src/modules/auth/tasks/: __init__.py  cleanup_tasks.py
src/modules/chatbot/: constants.py  enums.py
src/modules/chatbot/models/: __init__.py  chat_message.py  chat_summary.py  chat_thread.py  media_upload.py  moderation_log.py
src/modules/chatbot/repositories/: __init__.py  media_repo.py  message_repo.py  moderation_repo.py  summary_repo.py  thread_repo.py
src/modules/chatbot/routes/: __init__.py  uploads.py  websocket.py
src/modules/chatbot/services/: __init__.py  agent_service.py  chat_service.py  context_providers.py  context_service.py  moderation_service.py  websocket_service.py
src/modules/countries/: __init__.py  router.py  schemas.py  service.py
src/modules/countries/data/: countries.csv
src/modules/health/: router.py  schemas.py  service.py
src/modules/users/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/utils/: helpers.py
